# psmall

./: .gitignore  README.md  build.sh  pyproject.toml  release.sh  setup.py
psmall/: __init__.py  __main__.py  cli.py  compressor.py  config.py  menu.py  scanner.py  theme.py
